[package]
name = "spngw"
version = "0.3.1"
edition = "2024"

[dependencies]
arc-swap = "1.7"
async-trait = "0.1"
base64 = "0.22"
boring = "4"
bytes = "1"
chrono = "0.4"
dashmap = "6"
env_logger = "0.11"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
log = "0.4"
pingora = { version = "0.6", features = [ "lb", "boringssl" ] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync", "time"] }
